--- a/Curriculo.html
+++ b/Curriculo.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.pngtree.com%2Ffreepng%2Fprogrammer-icon-vector-image-developer-design-development-vector_12963274.html&psig=AOvVaw3A4fELqoOqRSzbK9OYvEWO&ust=1744063756423000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCKCAuPe1xIwDFQAAAAAdAAAAABAE" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="css/curriculoBoot.css">
     <title>Currículo -  Saulo Melo</title>
 </head>
 
